--- a/.antigenrc
+++ b/.antigenrc
@@ -3,7 +3,6 @@ antigen use oh-my-zsh
 
 # Load bundles from the default repo (oh-my-zsh)
 antigen bundle aws
-antigen bundle brew
 antigen bundle command-not-found
 antigen bundle docker
 antigen bundle history
@@ -12,7 +11,7 @@ antigen bundle git-auto-fetch
 antigen bundle git
 antigen bundle gitfast
 antigen bundle github
-antigen bundle osx
+antigen bundle sudo
 antigen bundle urltools
 
 # Load bundles from external repos
@@ -21,7 +20,7 @@ antigen bundle zsh-users/zsh-autosuggestions
 antigen bundle zsh-users/zsh-syntax-highlighting
 
 # Select theme
-antigen theme denysdovhan/spaceship-prompt
+antigen theme themes/amuse
 
 # Tell Antigen that you're done
 antigen apply
