--- a/.antigenrc
+++ b/.antigenrc
@@ -18,9 +18,10 @@ antigen bundle urltools
 # Load bundles from external repos
 antigen bundle zsh-users/zsh-completions
 antigen bundle zsh-users/zsh-autosuggestions
+antigen bundle zsh-users/zsh-syntax-highlighting
 
 # Select theme
-antigen theme blink
+antigen theme denysdovhan/spaceship-prompt
 
 # Tell Antigen that you're done
 antigen apply
