--- a/.antigenrc
+++ b/.antigenrc
@@ -2,9 +2,8 @@
 antigen use oh-my-zsh
 
 # Load bundles from the default repo (oh-my-zsh)
+antigen bundle apt
 antigen bundle brew
-antigen bundle command-not-found
-antigen bundle docker
 antigen bundle history
 antigen bundle git-auto-fetch
 antigen bundle git
